--- a/valuetransfer/src/main/res/layout/fragment_identity.xml
+++ b/valuetransfer/src/main/res/layout/fragment_identity.xml
@@ -46,6 +46,8 @@
                 android:layout_marginStart="8dp"
                 android:padding="4dp"
                 android:src="@drawable/ic_baseline_info_24"
+                app:tint="@color/white"
+                tools:tint="@color/white"
                 android:tooltipText="Attributes provide extra information about you and your identity"
                 app:layout_constraintBottom_toBottomOf="@+id/tvAttributesTitle"
                 app:layout_constraintStart_toEndOf="@+id/tvAttributesTitle"
@@ -113,6 +115,8 @@
                 android:layout_marginStart="8dp"
                 android:padding="4dp"
                 android:src="@drawable/ic_baseline_info_24"
+                app:tint="@color/white"
+                tools:tint="@color/white"
                 android:tooltipText="Attestations declare that a claim about a piece of information is validated by an authority"
                 app:layout_constraintBottom_toBottomOf="@+id/tvAttestationsTitle"
                 app:layout_constraintStart_toEndOf="@+id/tvAttestationsTitle"
