--- a/valuetransfer/src/main/res/layout/item_identity_attestation.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_attestation.xml
@@ -12,8 +12,7 @@
         android:id="@+id/clChatCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="4dp"
-        android:background="@drawable/square_rounded_dark"
+        android:background="@drawable/square_rounded_dark_green"
         android:paddingHorizontal="12dp"
         android:paddingVertical="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,14 +23,13 @@
             android:id="@+id/clChatContentOverview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/tvAttestationNameValue"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:textSize="14sp"
@@ -45,27 +43,29 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:layout_marginEnd="12dp"
+                android:gravity="end"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/light_gray"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toStartOf="@+id/clAttestationQRButton"
+                android:textSize="12sp"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toEndOf="@+id/tvAttestationHash"
                 app:layout_constraintStart_toEndOf="@+id/tvAttestationNameValue"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tvAttestationNameValue"
+                app:layout_constraintBottom_toBottomOf="@+id/tvAttestationNameValue"
                 tools:text="(id_metadata_range_18plus)" />
 
             <TextView
                 android:id="@+id/tvAttestationHash"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:typeface="monospace"
-                app:layout_constraintEnd_toStartOf="@+id/clAttestationQRButton"
+                app:layout_constraintEnd_toStartOf="@+id/clAttestationButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAttestationNameValue"
                 tools:text="a63a167e5e39f1971072ad4779163d475b971072a" />
@@ -74,33 +74,51 @@
                 android:id="@+id/tvAttestationBlob"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="12dp"
+                android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 android:typeface="monospace"
-                app:layout_constraintEnd_toStartOf="@+id/clAttestationQRButton"
+                app:layout_constraintEnd_toStartOf="@+id/clAttestationButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAttestationHash"
                 tools:text="0000000091d00d959323796576f00000000091" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clAttestationQRButton"
+                android:id="@+id/clAttestationButton"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/pill_rounded"
                 android:backgroundTint="@color/colorPrimaryValueTransfer"
                 app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
                     android:id="@+id/ivAttestationQRButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:padding="12dp"
+                    android:visibility="gone"
+                    tools:visibility="visible"
+                    android:src="@drawable/ic_qr_code_scan"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white"
+                    tools:tint="@color/white"/>
+
+                <ImageView
+                    android:id="@+id/ivAttestationDelete"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:padding="12dp"
-                    android:src="@drawable/ic_qr_code_scan"
+                    android:src="@drawable/ic_baseline_delete_24"
+                    android:visibility="gone"
+                    tools:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
