--- a/valuetransfer/src/main/res/drawable/pill_rounded_bottom_orange.xml
+++ b/valuetransfer/src/main/res/drawable/pill_rounded_bottom_orange.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorPrimaryValueTransfer"/>
+    <solid android:color="@color/colorOrange" />
     <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp" />
 </shape>
