--- a/valuetransfer/src/main/res/menu/contact_chat_options.xml
+++ b/valuetransfer/src/main/res/menu/contact_chat_options.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/actionEditContactName"
         android:title="Rename Contact" />
@@ -9,5 +10,13 @@
     <item
         android:id="@+id/actionCopyPublicKey"
         android:title="Copy Public Key" />
+    <item
+        android:id="@+id/actionShareContact"
+        android:title="Share Contact" />
+    <item
+        android:id="@+id/actionSearchFilterChat"
+        android:icon="@drawable/ic_search_filter"
+        android:title="Search/Filter Chat"
+        app:showAsAction="always"/>
 
 </menu>
